--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="contaner">
                 <nav class="navbar navbar-expand-sm navbar-dark main-menu main-scroll" style="background: rgba(255, 255, 255, 0);">
                     <a class="navbar-brand d-md-none d-sm-block" href="/">
-                        <img src="Images/logo.svg" />
+                        <img src="Images/Logo.svg" />
                     </a>
                     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
                         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="collapsibleNavId">
                         <a class="navbar-brand mr-auto d-none d-md-block" href="/">
-                            <img src="Images/logo.svg" />
+                            <img src="Images/Logo.svg" />
                         </a>
                         <ul class="navbar-nav mt-2 mt-lg-0">
                             <li class="nav-item active">
